[tool.poetry]
name = "kurs-3"
version = "0.1.0"
description = ""
authors = ["Ildar Gabdullin <ildar8803@gmail.com>"]
readme = "README.md"
packages = [{include = "kurs_3"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
