[tool.poetry]
name = "kurs-3"
version = "0.1.0"
description = ""
authors = ["Ildar Gabdullin <ildar8803@gmail.com>"]
readme = "README.md"
packages = [{include = "kurs_3"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
